# bazel-workspace

./: .tool-versions  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cdktf.out/: manifest.json
cdktf.out/stacks/test/: cdk.tf.json
cmd/test/: BUILD.bazel  main.go
